--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,15 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 colorama==0.4.6
-django==4.2.25
+Django==4.2.25
 djangorestframework==3.15.2
 kombu==5.5.4
 packaging==25.0
-prompt-toolkit==3.0.52
+prompt_toolkit==3.0.52
 python-dateutil==2.9.0.post0
 six==1.17.0
 sqlparse==0.5.3
-typing-extensions==4.13.2
+typing_extensions==4.13.2
 tzdata==2025.2
 vine==5.1.0
 wcwidth==0.2.14
